<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/logActivity"
        android:background="@color/colorChartreuse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/noLog"
            android:id="@+id/log_layout_logTxt"
            android:textSize="14sp"
            android:singleLine="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:text="@string/cleanLog"
            android:id="@+id/cleanLogBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:text="@string/exit"
            android:id="@+id/logReturnBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>